# mantis

./: .gitignore  README.md  pyproject.toml
mantis/client/: client.py
mantis/deck/: Card.py  card.py  color.py
mantis/game/: Game.py  README.md  game.py
mantis/player/: Player.py  Style.py  Tank.py  style.py  tank.py
mantis/server/: server.py
mantis/simulations/: scenarios.py
